// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextInputField rendering renders expected elements 1`] = `
<FieldWrapper
  className="TextInputField"
  helperId="random-id-helper"
  helperText="Helper text"
  htmlFor="random-id"
  label="Label"
  required={true}
>
  <TextInputField
    aria-describedby="random-id-helper"
    error={false}
    id="random-id"
    maxLength={10}
    name="name"
    onChange={[MockFunction]}
    placeholder="placeholder"
    required={true}
    type="text"
    value="value"
  />
</FieldWrapper>
`;

exports[`TextInputField rendering renders expected elements when className is set 1`] = `
<FieldWrapper
  className="TextInputField TestClass"
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Label"
>
  <TextInputField
    aria-describedby="random-id-helper"
    error={false}
    id="random-id"
    maxLength={10}
    name="name"
    onChange={[MockFunction]}
    placeholder="placeholder"
    type="text"
    value="value"
  />
</FieldWrapper>
`;

exports[`TextInputField rendering renders expected elements when error is set 1`] = `
<FieldWrapper
  className="TextInputField"
  error="Error"
  helperId="random-id-helper"
  helperText="Helper text"
  htmlFor="random-id"
  label="Label"
>
  <TextInputField
    aria-describedby="random-id-helper"
    error={true}
    id="random-id"
    maxLength={10}
    name="name"
    onChange={[MockFunction]}
    placeholder="placeholder"
    type="text"
    value="value"
  />
</FieldWrapper>
`;
